test/corpus/Complicated.txt
================================================================================
Complicated Function
================================================================================
foo(x: Int, y: Bool) <<= { y && x >= 0 ~ True } : IO() = do {
    z := x + 3;
    !seq(y) {
        w := x + 4;
        !print(w);
    };
};
--------------------------------------------------------------------------------

(source_file
  (any_dec
    (var_dec
      (low_ident)
      (starts_with_parens_expr
        (parens_expr
          (no_brackets_parens_expr
            (inner_expr
              (bind
                (any_ident
                  (low_ident))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident))))
              (bind
                (any_ident
                  (low_ident))
                (bind_op)
                (expr
                  (any_ident
                    (up_ident)))))))
        (op
          (op_ident))
        (expr
          (block
            (blockContent
              (expr
                (op_app
                  (expr
                    (op_app
                      (expr
                        (op_app
                          (expr
                            (any_ident
                              (low_ident)))
                          (op
                            (op_ident))
                          (expr
                            (any_ident
                              (low_ident)))))
                      (op
                        (op_ident))
                      (expr
                        (int_lit))))
                  (op
                    (op_ident))
                  (expr
                    (any_ident
                      (up_ident)))))))))
      (expr
        (fun_app
          (expr
            (any_ident
              (up_ident)))
          (parens_expr
            (no_brackets_parens_expr))))
      (expr
        (fun_app
          (expr
            (any_ident
              (low_ident)))
          (block
            (blockContent
              (var_dec
                (any_ident
                  (low_ident))
                (expr
                  (op_app
                    (expr
                      (any_ident
                        (low_ident)))
                    (op
                      (op_ident))
                    (expr
                      (int_lit)))))
              (cps_bind
                (expr
                  (fun_app
                    (expr
                      (fun_app
                        (expr
                          (any_ident
                            (low_ident)))
                        (parens_expr
                          (no_brackets_parens_expr
                            (inner_expr
                              (expr
                                (any_ident
                                  (low_ident))))))))
                    (block
                      (blockContent
                        (var_dec
                          (any_ident
                            (low_ident))
                          (expr
                            (op_app
                              (expr
                                (any_ident
                                  (low_ident)))
                              (op
                                (op_ident))
                              (expr
                                (int_lit)))))
                        (cps_bind
                          (expr
                            (fun_app
                              (expr
                                (any_ident
                                  (low_ident)))
                              (parens_expr
                                (no_brackets_parens_expr
                                  (inner_expr
                                    (expr
                                      (any_ident
                                        (low_ident)))))))))))))))))))))
